CMS Links, Cat Form, Cat submission handling basics
Removed Campaign Link, added Link for each cat form

Versioned Cat

Predefined Cat Form + Cat Form Fields

Approve, Reject + Restore Submissions

FedState Form Field

--- a/app/lang/de_DE.yml
+++ b/app/lang/de_DE.yml
@@ -1,4 +1,9 @@
 de_DE:
+  Streunerkatzen\Extensions\CatUserFormFieldEditorExtension:
+    ADD_FIELD: 'Feld hinzufügen'
+    ADD_FIELD_GROUP: 'Gruppe hinzufügen'
+    ADD_PAGE_BREAK: 'Seite hinzufügen'
+    FORMFIELDS: Formularfelder
   DNADesign\Elemental\Forms\TextCheckboxGroupField:
     Title: 'Titel'
     DISPLAYED: 'Angezeigt'
